Bug 1207868 - Implement Debugger.Object.asEnvironment. (r=jimb)